--- a/only_composer_json_1/composer.json
+++ b/only_composer_json_1/composer.json
@@ -47,7 +47,8 @@
         "sebastian/object-enumerator": "^5.0",
         "sebastian/recursion-context": "^5.0",
         "sebastian/type": "^4.0",
-        "sebastian/version": "^4.0"
+        "sebastian/version": "^4.0",
+        "symfony/http-kernel": "v4.4.39"
     },
     "config": {
         "platform": {
